--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,13 @@ width: 100vw;
 }
 
 .title{
-  font-family: 'Rubik-Bold';
+  font-family: 'CircularStd-Black';
+  margin-bottom: 10px;
 }
 
 .subtitle{
-  margin-left: 200px;
-  margin-right: 200px;
+
+  font-size: calc(10px + 2vmin);
 }
 
 .transition{
@@ -42,8 +43,7 @@ width: 100vw;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  font-family:'Rubik-Regular';
+  font-family:'CircularStd-Book';
   color: #FADCD9; /*15c3eb;*/
 }
 
@@ -55,7 +55,7 @@ width: 100vw;
   align-items: left;
   text-align: left;
   font-size: calc(10px + 2vmin);
-  font-family:'Rubik-Regular';
+  font-family:'CircularStd-Book';
   color: #000080;
   margin-top:30px;
   margin-left: 10vw;
@@ -77,12 +77,37 @@ width: 100vw;
    margin-left:100px;
    margin-right:100px;
   }
+
+  .title{
+    font-size: 75px;
+  }
+
+  .subtitle{
+    margin-left: 50px;
+    margin-right: 50px;
+  }
 }
 
-@media all and (max-width: 2000px) and (min-width: 1001px) {
+@media (max-width: 400px)
+{
+  .subtitle{
+    font-size: 25px;
+  }
+}
+
+@media all and (max-width: 3000px) and (min-width: 1001px) {
   .App-section {
    margin-left:400px;
    margin-right:400px;
+  }
+
+  .title{
+    font-size: 100px;
+  }
+
+  .subtitle{
+    margin-left: 200px;
+    margin-right: 200px;
   }
 }
 
@@ -108,4 +133,19 @@ width: 100vw;
 @font-face{
   font-family:'Rubik-Bold';
   src: local('Rubik-Bold'), url(./fonts/Rubik/Rubik-Bold.ttf) format('truetype');
+}
+
+@font-face{
+  font-family:'CircularStd-Black';
+  src: local('CircularStd-Black'), url(./fonts/CircularStd/CircularStd-Black.ttf) format('truetype');
+}
+
+@font-face{
+  font-family:'CircularStd-Book';
+  src: local('CircularStd-Book'), url(./fonts/CircularStd/CircularStd-Book.ttf) format('truetype');
+}
+
+@font-face{
+  font-family:'CircularStd-Bold';
+  src: local('CircularStd-Bold'), url(./fonts/CircularStd/CircularStd-Bold.ttf) format('truetype');
 }
